bdr.BDR.scala.error
Erreur de compilation :
BDR:22: error: not found: value lisMessage
  action=lisMessage()
         ^